--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_form_builder: ^9.1.1
   file_picker: ^6.1.1
   form_builder_validators: ^9.1.0
-  flutter_svg: ^2.0.10+1
+  flutter_svg: 
   get_it: ^7.6.7
   hooks_riverpod: ^2.4.10
   image_picker: ^1.0.7
@@ -53,6 +53,11 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   carousel_slider: ^4.2.1
   chat_bubbles: ^1.5.0
+  flutter_phantom: ^1.0.1
+  uni_links: ^0.5.1
+  url_launcher: ^6.2.5
+  # solana_wallets_flutter: ^1.1.1
+  # solana: ^0.30.4
   # huddle01_flutter_client: ^0.0.1-beta-v5.5.2
 
 dev_dependencies:
